# transactions

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  Readme.md  docker-compose.yml
config/: base.toml  development.toml  test.toml
docker/: Dockerfile.default  Dockerfile.release  docker-compose.yml
docker/postgres/: postgres.conf
docs/: api.yml
k8s/: 00-cm-pay-gw.yml  00-cm-pay-trx.yml  00-job-createdb.yml  20-svc-pay-gw.yml  20-svc-pay-trx.yml  30-deploy-pay-gw.yml  30-deploy-pay-trx.yml
load_tests/: overspend.rb  overspend.yml
migrations/2018-10-04-133049_create_users/: up.sql
migrations/2018-10-09-123740_create_accaunts/: up.sql
migrations/2018-10-09-123740_create_accounts/: up.sql
migrations/2018-10-10-140142_create_transactions/: up.sql
migrations/2018-10-19-115045_create_seen_hashes/: down.sql  up.sql
migrations/2018-10-19-115059_create_blockchain_transactions/: down.sql  up.sql
migrations/2018-10-22-091431_update_transactions/: down.sql  up.sql
migrations/2018-10-23-141838_update_blockchain_transactions/: down.sql  up.sql
migrations/2018-10-24-111059_create_strange_blockchain_transactions/: down.sql  up.sql
migrations/2018-10-24-142713_create_pending_blockchain_transactions/: down.sql  up.sql
migrations/2018-10-25-131517_update_seen_hashes/: down.sql  up.sql
migrations/2018-10-26-153555_update_blockchain_transaction/: down.sql  up.sql
migrations/2018-10-26-153838_update_strange_blockchain_transaction/: up.sql
migrations/2018-10-31-063453_create_indices/: down.sql  up.sql
migrations/2018-11-06-012027_remove_balance_from_account/: down.sql  up.sql
migrations/2018-11-07-121143_remove_hold_until/: down.sql  up.sql
migrations/2018-11-07-205424_add_tx_gid/: down.sql  up.sql
migrations/2018-11-08-113153_add_transaction_groups/: down.sql  up.sql
migrations/2018-11-08-125541_remove_status_from_transactions/: down.sql  up.sql
migrations/2018-11-08-203919_move_fields_from_tx_to_tx_group/: down.sql  up.sql
migrations/2018-11-08-213034_restructure_tx_fields_in_tx_groups/: down.sql  up.sql
migrations/2018-11-09-041805_tx_group_foreign_key/: down.sql  up.sql
migrations/2018-11-09-044031_rename_gid/: down.sql  up.sql
migrations/2018-11-09-060315_add_kinds_to_txs/: down.sql  up.sql
migrations/2018-11-09-122804_remove_fees_from_txs/: down.sql  up.sql
migrations/2018-11-13-041239_add_erc20_operation_kind_to_blockchain_transactions/: down.sql  up.sql
migrations/2018-11-23-101456_create_key_value/: down.sql  up.sql
src/: cli.yml  config.rs  lib.rs  logger.rs  macros.rs  main.rs  prelude.rs  schema.rs  sentry_integration.rs  utils.rs
(+116 files in other folders)
