[package]
name = "transactions"
version = "0.1.0"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]

[lib]
name = "transactions_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.9"
clap = {version = "2", features = ["yaml"]}
config = "0.9"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "extras"] }
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
http_router = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
jsonwebtoken = "5"
log = "0.4"
num = { version = "0.2", features = ["i128"] }
r2d2 = "0.8.1"
regex = "1"
sentry = "0.12"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio-core = "0.1.17"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
validator = "0.8"
validator_derive = "0.8"
