[package]
name = "transactions"
version = "0.2.2"
authors = ["Alexey Karasev <karasev.alexey@gmail.com>"]

[lib]
name = "transactions_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.9"
clap = {version = "2", features = ["yaml"]}
config = "0.9"
chrono = "0.4"
diesel = { version = "1.3.3", features = ["postgres", "chrono", "extras"] }
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
futures-cpupool = "0.1.7"
http_router = "0.1"
gelf = { git = "https://github.com/StoriqaTeam/gelf-rust", rev = "b05956244f020bb4a62b859bd1025b6c699b2628" }
hyper = "0.12"
hyper-tls = "0.3"
lapin-async = {version = "0.13.4", git = "https://github.com/StoriqaTeam/lapin", branch = "0.13.4" }
lapin-futures = {version = "0.13.4", git = "https://github.com/StoriqaTeam/lapin", branch = "0.13.4" }
log = { version = "0.4", features = ["std", "serde"] }
num = { version = "0.2", features = ["i128"] }
rand = "0.5"
r2d2 = "0.8.1"
regex = "1"
sentry = "0.12"
serde = "1"
serde_derive = "1"
serde_json = {version = "1", features = ["arbitrary_precision"]}
serde_qs = "0.4"
simplelog = "0.5.3"
tokio = "0.1"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
validator = "0.8"
validator_derive = "0.8"
